# CloudComputingMaster

./: Dockerfile  README.md  Vagrantfile  docker-compose.yml  docker_install.sh  docker_start.sh  pyproject.toml  requirements.txt  script.sh
.github/workflows/: main.yml
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
kt1/new_app/: manage.py
kt1/new_app/counter/: admin.py  models.py  views.py
kt1/new_app/new_app/: settings.py  wsgi.py
new_app/: db.sqlite3
new_app/counter/: serializers.py
new_app/counter/migrations/: 0001_initial.py
new_app/new_app/: asgi.py  settings.py  urls.py
new_app/student/: models.py  serializers.py  views.py
new_app/student/migrations/: 0001_initial.py
nginx/: nginx.conf
